# SotsuseiClientApp

./: build.gradle  gradle.properties
app/: CMakeLists.txt  build.gradle  google-services.json  proguard-rules.pro
app/src/androidTest/java/jp/yuta/kohashi/sotsuseiclientapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: OCR.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/anpr/: Anpr.cpp  Anpr.h  CMakeLists.txt  DetectRegions.cpp  DetectRegions.h  JniManager.cpp  OCR.cpp  OCR.h  Plate.cpp  Plate.h  main.cpp
app/src/main/java/jp/yuta/kohashi/sotsuseiclientapp/: App.kt  MainActivity.kt
app/src/main/java/jp/yuta/kohashi/sotsuseiclientapp/netowork/: FirebaseHelper.kt  ShutterImgHelper.kt  SotsuseiApiHelper.kt  SotsuseiApiManager.kt  SotsuseiJsonApiService.kt
app/src/main/java/jp/yuta/kohashi/sotsuseiclientapp/netowork/api/: ApiClient.kt  SotsuseiJsonApi.kt
app/src/main/java/jp/yuta/kohashi/sotsuseiclientapp/netowork/exception/: ApiException.kt
app/src/main/java/jp/yuta/kohashi/sotsuseiclientapp/receiver/: MediaControlReceiver.kt
app/src/main/java/jp/yuta/kohashi/sotsuseiclientapp/service/: BasePeriodicService.kt  BaseService.kt  MyFirebaseInstanceIDService.kt  MyFirebaseMessagingService.kt  ServiceExtension.kt  ServiceObjectExtension.kt  SotsuseiClientAppService.kt  SotsuseiSoundService.kt
app/src/main/java/jp/yuta/kohashi/sotsuseiclientapp/ui/: BaseActivity.kt  BaseDialogFragment.kt  BaseDrawerActivity.kt  BaseFragment.kt  BaseToolbarActivity.kt  RegularlyScheduler.kt  StartActivity.kt  StartActivity2.kt  StartActivityForResult.kt  ToastHelper.kt
app/src/main/java/jp/yuta/kohashi/sotsuseiclientapp/utils/: DisplayUtil.kt  NetworkUtil.kt  PrefUtil.kt  ResUtil.kt  Util.kt
app/src/main/res/drawable/: bg_btn_drawer_toggle.xml  bg_illegalparking_button.xml  bg_number_plate_back.xml  bg_running_panel.xml  bg_shutter_button.xml
app/src/main/res/drawable-v21/: bg_btn_round.xml
app/src/main/res/layout/: activity_debug.xml  activity_main.xml  activity_number_plate_scan.xml  diag_fragment_illefalparking_01.xml  diag_fragment_illegalparking.xml  fragment_home.xml  fragment_illegal_parking.xml  fragment_info.xml  fragment_info_emp.xml  fragment_login.xml  fragment_login_emp.xml  fragment_login_tenpo.xml  fragment_running.xml  header_drawer.xml  home_fragment.xml  view_number_plate.xml
app/src/main/res/menu/: menu_drawer.xml
app/src/main/res/values/: colors.xml  dimens.xml  ic_launcher_background.xml  strings.xml  styles.xml
app/src/test/java/jp/yuta/kohashi/sotsuseiclientapp/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+31 files in other folders)
